# numerical-methods

./: Cargo.toml  README.md
src/: fft.rs  main.rs  root_finding.rs
