[package]
name = "numerical-methods"
version = "0.1.0"
authors = ["Ken Butler <Ken.Butler.AE@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
env_logger = "0.8.2"
simple_logger = "1.11.0"
plotters = "0.3.0"
rand = "0.7.3"
rand_distr = "0.2.2"
rand_xorshift = "0.2.0"

[dependencies.num-complex]
version = "0.3"
default-features = false